--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,14 +1,31 @@
 <% layout('./layout/boilerplate.ejs') %>
-<form action="/campgrounds/<%= camp._id %>?_method=PUT" method="post">
-    <section>
-        <label for="title">Campground Title</label>
-        <input type="text" id="title" name="campground[title]" value="<%= camp.title %>">
-    </section>
-    <section>
-        <label for="location">Campground Location</label>
-        <input type="text" id="location" name="campground[location]" value="<%= camp.location %>">
-    </section>
-    <button>Update Campground</button>
-</form>
-<br>
-<h3> <a href="/campgrounds/<%= camp._id %>">Back to Campground</a> </h3>
+<div class="row">
+    <h1 class="text-center">Edit Campground</h1>
+    <form class="col-8 offset-2" action="/campgrounds/<%= camp._id %>?_method=PUT" method="post">
+      <section class="my-4">
+          <label class="form-label fw-bold" for="title">Campground Title</label>
+          <input required class="form-control border border-black fw-medium" type="text" id="title" name="campground[title]" value="<%= camp.title %>">
+      </section>
+      <section class="my-4">
+          <label class="form-label fw-bold" for="location">Campground Location</label>
+          <input require class="form-control border border-black fw-medium" type="text" id="location" name="campground[location]" value="<%= camp.location %>">
+      </section>
+      <section class="my-4">
+          <label class="form-label fw-bold" for="image">Image URL</label>
+          <input required class="form-control border border-black fw-medium" type="text" id="image" name="campground[image]" value="<%= camp.image %>">
+      </section>
+      <label class="form-label fw-bold" for="price">Price Per Night</label>
+      <div class="input-group">
+          <span class="input-group-text border border-black">$</span>
+          <input value="<%= camp.price %>" required type="number" min="0" placeholder="0.00" step="0.01" class="form-control border border-black fw-medium" aria-label="Amount (to the nearest dollar)" id="price" name="campground[price]">
+      </div>
+      <section class="my-4">
+          <label class="form-label fw-bold" for="description">Description</label>
+          <textarea rows="4" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required><%= camp.description %></textarea>
+      </section>
+      <button class="btn btn-success py-2 my-2">Update Campground</button>
+      <br>
+      <br>
+      <h5> <a href="/campgrounds/<%= camp._id %>">Back to Campground</a> </h5>
+  </form>
+  </div>
