--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,9 +1,22 @@
 <% layout('./layout/boilerplate.ejs') %>
 <h1>All Campgrounds</h1>
 <h3><a href="/campgrounds/new">Create New Campground</a></h3>
-<ul>
-    <% for( let camp of campArr ) { %>
-        <li>  <a href="/campgrounds/<%= camp._id %>"><%=camp.title%></a>   </li>
-    <% } %>
-</ul>
+<% for( let camp of campArr ) { %>
+    <div class="card my-md-5">
+        <div class="row">
+            <div class="col-md-4">
+                <img class="img-fluid" src="<%= camp.image %>" alt="camp image">
+            </div>
+            <div class="col-md-8">
+                <div class="card-body">
+                    <h5 class="card-title"><%= camp.title %></h5>
+                    <p class="card-text"><%= camp.description %></p>
+                   <form action="/campgrounds/<%= camp._id %>">
+                    <button class="btn btn-primary">View <%=camp.title%></button>
+                   </form>
+                </div>
+            </div>
+        </div>
+    </div>
+<% } %>
 
