--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand text-white fs-2" href="#">Camp Finder</a>
+      <a class="navbar-brand text-white fs-2" href="/campgrounds">Camp Finder</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon bg-white"></span>
       </button>
