--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -1,31 +1,59 @@
 <% layout('./layout/boilerplate.ejs') %>
 <div class="row">
     <h1 class="text-center">Edit Campground</h1>
-    <form class="col-8 offset-2" action="/campgrounds/<%= camp._id %>?_method=PUT" method="post">
+    <form class="col-8 offset-2 form-validation" action="/campgrounds/<%= camp._id %>?_method=PUT" method="post" novalidate>
       <section class="my-4">
           <label class="form-label fw-bold" for="title">Campground Title</label>
           <input required class="form-control border border-black fw-medium" type="text" id="title" name="campground[title]" value="<%= camp.title %>">
+          <div class="valid-feedback">
+            Looks good!
+          </div>      
+          <div class="invalid-feedback">
+            Please enter a title.
+          </div>  
       </section>
       <section class="my-4">
           <label class="form-label fw-bold" for="location">Campground Location</label>
-          <input require class="form-control border border-black fw-medium" type="text" id="location" name="campground[location]" value="<%= camp.location %>">
+          <input required class="form-control border border-black fw-medium" type="text" id="location" name="campground[location]" value="<%= camp.location %>">
+          <div class="valid-feedback">
+            Looks good!
+          </div> 
+          <div class="invalid-feedback">
+            Please enter a location.
+          </div>         
       </section>
       <section class="my-4">
           <label class="form-label fw-bold" for="image">Image URL</label>
           <input required class="form-control border border-black fw-medium" type="text" id="image" name="campground[image]" value="<%= camp.image %>">
+          <div class="valid-feedback">
+            Looks good!
+          </div> 
+          <div class="invalid-feedback">
+            Please enter an image url.
+          </div>   
       </section>
       <label class="form-label fw-bold" for="price">Price Per Night</label>
       <div class="input-group">
           <span class="input-group-text border border-black">$</span>
           <input value="<%= camp.price %>" required type="number" min="0" placeholder="0.00" step="0.01" class="form-control border border-black fw-medium" aria-label="Amount (to the nearest dollar)" id="price" name="campground[price]">
-      </div>
+          <div class="valid-feedback">
+            Looks good!
+            </div>  
+            <div class="invalid-feedback">
+                Please enter a valid price.
+            </div>    
+        </div>
       <section class="my-4">
           <label class="form-label fw-bold" for="description">Description</label>
           <textarea rows="4" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required><%= camp.description %></textarea>
-      </section>
-      <button class="btn btn-success py-2 my-2">Update Campground</button>
-      <br>
-      <br>
-      <h5> <a href="/campgrounds/<%= camp._id %>">Back to Campground</a> </h5>
+          <div class="valid-feedback">
+            Looks good!
+          </div>
+          <div class="invalid-feedback">
+            Please enter a description.
+          </div>
+       </section>
+      <button class="btn btn-success py-2 my-1">Update Campground</button>
+      <a  href="/campgrounds/<%= camp._id %>" class="d-inline btn btn-danger py-2 my-1 ms-4">Cancel</a>
   </form>
   </div>
