--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -1,32 +1,60 @@
 <% layout('./layout/boilerplate.ejs') %>
 <div class="row">
   <h1 class="text-center">New Campground</h1>
-  <form class="col-8 offset-2" action="/campgrounds/new" method="post">
+  <form class="col-8 offset-2 form-validation" action="/campgrounds/new" method="post" novalidate>
     <section class="my-4">
         <label class="form-label fw-bold" for="title">Campground Title</label>
         <input required class="form-control border border-black fw-medium" type="text" id="title" name="campground[title]">
+        <div class="valid-feedback">
+            Looks good!
+        </div>      
+        <div class="invalid-feedback">
+            Please enter a title.
+        </div>    
     </section>
     <section class="my-4">
         <label class="form-label fw-bold" for="location">Campground Location</label>
-        <input require class="form-control border border-black fw-medium" type="text" id="location" name="campground[location]">
+        <input required class="focus form-control border border-black fw-medium" type="text" id="location" name="campground[location]">
+        <div class="valid-feedback">
+            Looks good!
+        </div> 
+        <div class="invalid-feedback">
+            Please enter a location.
+        </div>         
     </section>
     <section class="my-4">
         <label class="form-label fw-bold" for="image">Image URL</label>
         <input required class="form-control border border-black fw-medium" type="text" id="image" name="campground[image]">
+        <div class="valid-feedback">
+            Looks good!
+        </div> 
+        <div class="invalid-feedback">
+            Please enter an image url.
+        </div>    
     </section>
     <label class="form-label fw-bold" for="price">Price Per Night</label>
     <div class="input-group">
         <span class="input-group-text border border-black">$</span>
         <input  required type="number" min="0" placeholder="0.00" step="0.01" class="form-control border border-black fw-medium" aria-label="Amount (to the nearest dollar)" id="price" name="campground[price]">
+        <div class="valid-feedback">
+            Looks good!
+        </div>  
+        <div class="invalid-feedback">
+            Please enter a valid price.
+        </div>    
     </div>
     <section class="my-4">
         <label class="form-label fw-bold" for="description">Description</label>
         <textarea class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required></textarea>
+        <div class="valid-feedback">
+            Looks good!
+        </div>
+        <div class="invalid-feedback">
+            Please enter a description.
+        </div>
     </section>
-    <button class="btn btn-success py-2 my-2">Create Campground</button>
-    <br>
-    <br>
-    <h5> <a href="/campgrounds">All Campgrounds</a> </h5>
+    <button class="btn btn-success py-2 my-1">Create Campground</button>
+    <a  href="/campgrounds" class="d-inline btn btn-danger py-2 my-1 ms-4">Cancel</a>
 </form>
 </div>
 
