--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,6 +1,6 @@
 <% layout('./layout/boilerplate.ejs') %>
 <div class="row mb-5">
-  <div class="card col-lg-6 offset-lg-3">
+  <div class="card col-md-6">
     <img src="<%= camp.image %>" alt="camp image" class="mt-3 card-img-top">
     <div class="card-body">
       <h2 class="card-title"><%= camp.title %></h2>
@@ -17,4 +17,38 @@
       </form>
     </div>
   </div>
+  <div class="col-md-5 mt-3 ms-md-5">
+    <h2 class="mb-4">Leave A Review</h2>
+    <form class="form-validation" action="/campgrounds/<%= camp._id %>/reviews/new" method="post" novalidate>
+      <div class="mb-3">
+        <label for="rating" class="form-label fs-5 fw-bold"><span>Rating:</span> <input class="text-center ms-3 fw-bold" readonly type="number" name="amountRange" min="1" max="5" value="3" oninput="this.form.review[rating].value=this.value" /> / 5</label>
+        <input class="form-range" type="range" name="review[rating]" min="1" max="5" step="0.1" value="3" oninput="this.form.amountRange.value=this.value" />
+      </div>
+      <div class="mb-3">
+        <label class="form-label fs-5 fw-bold" for="body">Review</label>
+        <textarea class="form-control border border-black fw-semibold" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+        <div class="valid-feedback fs-6 fw-semibold">
+          Looks good!
+        </div>
+        <div class="invalid-feedback fs-6 fw-semibold">
+          Please enter a review
+        </div>   
+      </div>
+      <button class="btn btn-success mt-2">Submit</button>
+    </form>
+    <section class="mt-3">
+      <h2>Reviews</h2>
+      <% for( let review of camp.reviews ) { %>
+          <div class="card mt-3">
+            <div class="card-body">
+              <h5 class="card-title">Rating: <%= review.rating %></h5>
+              <div class="card-text"><%= review.body %></div>
+              <form class="d-flex flex-row-reverse" action="/campgrounds/<%= camp._id %>/reviews/<%= review._id %>?_method=DELETE" method="post"><button class="mt-2 btn btn-sm btn-danger">Delete</button></form>
+            </div>
+          </div>
+      <% } %>
+    </section>
+  </div>
 </div>
+
+
