--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -10,9 +10,10 @@
             <div class="col-md-8">
                 <div class="card-body">
                     <h5 class="card-title"><%= camp.title %></h5>
+                    <p class="fw-semibold"><%=camp.location%></p>
                     <p class="card-text"><%= camp.description %></p>
                    <form action="/campgrounds/<%= camp._id %>">
-                    <button class="btn btn-primary">View <%=camp.title%></button>
+                   <button class="btn btn-primary mt-3">View <%=camp.title%></button>
                    </form>
                 </div>
             </div>
