--- a/views/layout/boilerplate.ejs
+++ b/views/layout/boilerplate.ejs
@@ -9,7 +9,9 @@
 <body class="d-flex flex-column min-vh-100">
     <%- include("../partials/navbar") %>
     <main class="container mt-5 mb-3">
-        <%- include("../partials/flashMessage") %>
+        <div class="col-md-6 offset-md-3">
+          <%- include("../partials/flashMessage") %>
+        </div>
         <%- body %>
     </main>
     <%- include("../partials/footer") %>
