--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-dark sticky-top">
     <div class="container-fluid">
-      <a class="navbar-brand text-white fs-2" href="/campgrounds">Camp Finder</a>
+      <a class="navbar-brand text-white fs-2" href="/">Camp Finder</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon bg-white"></span>
       </button>
@@ -9,6 +9,14 @@
           <a class="nav-link text-white fs-5" href="/">Home</a>
           <a class="nav-link text-white fs-5" href="/campgrounds">Campgrounds</a>
           <a class="nav-link text-white fs-5" href="/campgrounds/new">New Campground</a>
+        </div>
+        <div class="navbar-nav text-white ms-auto">
+          <% if (currentUser) { %>
+            <a class="nav-link text-white fs-5" href="/logout">Logout</a>
+          <% } else { %>
+          <a class="nav-link text-white fs-5" href="/login">Login</a>
+          <a class="nav-link text-white fs-5" href="/register">Register</a>
+          <% } %>
         </div>
       </div>
     </div>
