Added authorization to all routes

--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -45,7 +45,7 @@
     </div>
     <section class="my-4">
         <label class="form-label fw-bold" for="description">Description</label>
-        <textarea class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required></textarea>
+        <textarea rows="4" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required></textarea>
         <div class="valid-feedback">
             Looks good!
         </div>
