--- a/views/partials/flashMessage.ejs
+++ b/views/partials/flashMessage.ejs
@@ -1,6 +1,6 @@
 <% if ( success && success.length) { %>
   <div class="alert alert-success alert-dismissible fade show" role="alert">
-    <strong>Success!</strong> <%= success %>
+    <strong>Success! </strong> <%= success %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% } %>
@@ -8,7 +8,7 @@
 
 <% if ( error && error.length) { %>
   <div class="alert alert-danger alert-dismissible fade show" role="alert">
-    <strong>Error</strong> <%= error %>
+    <strong>Error! </strong> <%= error %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
   </div>
 <% } %>
