--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,4 +1,5 @@
 <% layout('./layout/boilerplate.ejs') %>
+<link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row mb-5">
   <div class="card col-md-6">
     <img src="<%= camp.image %>" alt="camp image" class="mt-3 card-img-top">
@@ -27,12 +28,24 @@
     <h2 class="mb-4">Leave A Review</h2>
     <form class="form-validation" action="/campgrounds/<%= camp._id %>/reviews/new" method="post" novalidate>
       <div class="mb-3">
-        <label for="rating" class="form-label fs-5 fw-bold"><span>Rating:</span> <input class="text-center ms-3 fw-bold" readonly type="number" name="amountRange" min="1" max="5" value="3" oninput="this.form.review[rating].value=this.value" /> / 5</label>
-        <input class="form-range" type="range" name="review[rating]" min="1" max="5" step="0.1" value="3" oninput="this.form.amountRange.value=this.value" />
+        <fieldset class="starability-basic mt-2">
+          <legend  class="form-label fs-5 fw-bold">Rating:</legend>
+          <input type="radio" id="no-rate" class="input-no-rate" name="review[rating]" value="0" checked aria-label="No rating." />
+          <input type="radio" id="first-rate1" name="review[rating]" value="1" />
+          <label for="first-rate1" title="Terrible">1 star</label>
+          <input type="radio" id="first-rate2" name="review[rating]" value="2" />
+          <label for="first-rate2" title="Not good">2 stars</label>
+          <input type="radio" id="first-rate3" name="review[rating]" value="3" />
+          <label for="first-rate3" title="Average">3 stars</label>
+          <input type="radio" id="first-rate4" name="review[rating]" value="4" />
+          <label for="first-rate4" title="Very good">4 stars</label>
+          <input type="radio" id="first-rate5" name="review[rating]" value="5" />
+          <label for="first-rate5" title="Amazing">5 stars</label>
+        </fieldset>
       </div>
       <div class="mb-3">
         <label class="form-label fs-5 fw-bold" for="body">Review</label>
-        <textarea class="form-control border border-black fw-semibold" name="review[body]" id="body" cols="30" rows="3" required></textarea>
+        <textarea required class="form-control border border-black fw-semibold" name="review[body]" id="body" cols="30" rows="3" placeholder="Leave your review here..."></textarea>
         <div class="valid-feedback fs-6 fw-semibold">
           Looks good!
         </div>
@@ -48,8 +61,10 @@
       <% for( let review of camp.reviews ) { %>
           <div class="card mt-3">
             <div class="card-body">
-              <h5 class="card-title">Rating: <%= review.rating %></h5>
-              <div class="card-subtitle mb-2">By <%= review.author.username %></div>
+              <p class="starability-result mt-2" data-rating=<%= review.rating %>>
+                Rated: <%= review.rating %> stars
+              </p>
+              <div class="card-subtitle fw-bold mb-2">By <%= review.author.username %></div>
               <div class="card-text"><%= review.body %></div>
               <% if (currentUser && review.author._id.equals(currentUser._id)) { %>
                 <form class="d-flex flex-row-reverse" action="/campgrounds/<%= camp._id %>/reviews/<%= review._id %>?_method=DELETE" method="post"><button class="mt-2 btn btn-sm btn-danger">Delete</button></form> 
