--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -5,7 +5,7 @@
     <div class="card my-md-5">
         <div class="row">
             <div class="col-md-4">
-                <img class="img-fluid" src="<%= camp.image %>" alt="camp image">
+                <img class="img-fluid" src="<%= camp.images[0].url %>" alt="camp image">
             </div>
             <div class="col-md-8">
                 <div class="card-body">
