--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,8 +1,30 @@
 <% layout('./layout/boilerplate.ejs') %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
 <div class="row mb-5">
-  <div class="card col-md-6">
-    <img src="<%= camp.image %>" alt="camp image" class="mt-3 card-img-top">
+ 
+
+  <div class="card col-md-6 pt-2">
+     <!-- CAROSEL -->
+    <div id="carouselExample" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <% camp.images.forEach( (img,i) => { %>
+        <div class="carousel-item <%= i===0 ? 'active' : "" %>">
+          <img src="<%= img.url.replace("/upload", "/upload/w_400,h_300") %>" class="d-block w-100" alt="">
+        </div>
+      <% }) %>
+
+    </div>
+    <% if (camp.images.length >= 2) { %>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"  data-bs-slide="prev">
+        <span class="carousel-control-prev-icon bg-primary opacity-75" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+        <span class="carousel-control-next-icon bg-primary opacity-75" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+    <% } %>
+  </div>
     <div class="card-body">
       <h2 class="card-title"><%= camp.title %></h2>
       <p class="card-tex fw-semibold"><%=camp.description%></p>
