--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,5 +1,6 @@
 <% layout('./layout/boilerplate.ejs') %>
-<h1>All Campgrounds</h1>
+<div id="map" style="width: 100%; height: 500px"></div>
+<h1 class="mt-4">All Campgrounds</h1>
 <h3><a href="/campgrounds/new">Create New Campground</a></h3>
 <% for( let camp of campArr ) { %>
     <div class="card my-md-5">
@@ -20,4 +21,9 @@
         </div>
     </div>
 <% } %>
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+  const campgrounds = {features: <%-JSON.stringify(campArr)%>}
+</script>
+<script src="/scripts/clusterMap.js"></script>
 
