--- a/views/campgrounds/show.ejs
+++ b/views/campgrounds/show.ejs
@@ -1,9 +1,11 @@
 <% layout('./layout/boilerplate.ejs') %>
 <link rel="stylesheet" href="/stylesheets/stars.css">
-<div class="row mb-5">
- 
 
-  <div class="card col-md-6 pt-2">
+<div class="row mb-5">
+  <div class="col-md-6">
+  <!-- Map -->
+   <div id='map' style='width: 400px; height: 300px;'></div>
+  <div class="card pt-2 px-2">
      <!-- CAROSEL -->
     <div id="carouselExample" class="carousel slide" data-ride="carousel">
     <div class="carousel-inner">
@@ -45,6 +47,7 @@
       </div>
     <% } %>
   </div>
+ </div>
   <div class="col-md-5 mt-3 ms-md-5">
     <% if (currentUser) { %>
     <h2 class="mb-4">Leave A Review</h2>
@@ -97,5 +100,9 @@
     </section>
   </div>
 </div>
-
+<script>
+  const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
+  const campground = <%- JSON.stringify(camp) %>;
+</script>
+<script src="/scripts/showPageMap.js"></script>
 
