urgent quick fix on api token

--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -33,6 +33,9 @@
             </div>    
         </section>
         <button class="btn btn-success">Register</button>
+        <div class="text-center mt-3 fs-5 fw-semibold">
+            <span class="text-body-secondary">Already Registered?    </span> <a class="ms-2" href="/login">Login</a>
+        </div>
     </form>
 </div>
 
