--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -35,7 +35,7 @@
         </div>
       <section class="my-4">
           <label class="form-label fw-bold" for="description">Description</label>
-          <textarea rows="4" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required><%= camp.description %></textarea>
+          <textarea rows="3" maxlength="350" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required><%= camp.description %></textarea>
           <div class="valid-feedback">
             Looks good!
           </div>
