--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -1,26 +1,44 @@
 <% layout('./layout/boilerplate.ejs') %>
 <div id="map" style="width: 100%; height: 500px"></div>
-<h1 class="mt-4">All Campgrounds</h1>
-<h3><a href="/campgrounds/new">Create New Campground</a></h3>
-<% for( let camp of campArr ) { %>
-    <div class="card my-md-5">
-        <div class="row">
-            <div class="col-md-4">
-                <img class="img-fluid" src="<%= camp.images[0].url %>" alt="camp image">
-            </div>
-            <div class="col-md-8">
-                <div class="card-body">
-                    <h5 class="card-title"><%= camp.title %></h5>
-                    <p class="fw-semibold"><%=camp.location%></p>
-                    <p class="card-text"><%= camp.description %></p>
-                   <form action="/campgrounds/<%= camp._id %>">
-                   <button class="btn btn-primary mt-3">View <%=camp.title%></button>
-                   </form>
-                </div>
-            </div>
-        </div>
-    </div>
+<% if (type == "all") { %>
+<h1 class="mt-4 mb-4">All Campgrounds</h1> 
+<% } else if (type === "mine") { %>
+<h1 class="mt-4 mb-4">My Campgrounds</h1> 
+<% } else if (type === "results") { %>
+<h1 class="mt-4 mb-4">Results</h1> 
 <% } %>
+ 
+<form action="/campgrounds/search">
+
+<% if (type !== "mine") { %>
+ <div class="input-group mb-3">
+    <select name="option" class="p-2 px-3 border border-black fw-semibold rounded-left" aria-label="Default select example">
+      <option selected value="name">Name</option>   
+      <option value="address">Address</option>
+    </select>
+    <input name="query" required type="text" class="w-50 px-2 text border border-black" placeholder="Search campgrounds by address or name">
+    <button class="btn btn-primary rounded-0">Search</button>
+</div>
+</form>
+<% } %>
+
+<div  class="row mb-3">
+<% for( let camp of campArr ) { %>
+   <div class="col-lg-4 mt-4">
+    <div class="card p-3 mx-1">
+           <img class="card-top" src="<%= camp.images[0].url.replace("/upload", "/upload/w_370,h_250") %>" alt="camp image">
+            <div class="card-body">
+                <h5 class="card-title fs-5 text-truncate"><%= camp.title %></h5>
+                <p class="fw-semibold fs-6 text-truncate"><%=camp.location%></p>
+                <p class="card-text text text-truncate"><%= camp.description %></p>
+                <form action="/campgrounds/<%= camp._id %>">
+                <button class="btn btn-primary mt-3">View Camp</button>
+                </form>
+            </div> 
+    </div>
+   </div>
+<% } %>
+</div>
 <script>
   const mapToken = "<%-process.env.MAPBOX_TOKEN%>";
   const campgrounds = {features: <%-JSON.stringify(campArr)%>}
