--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -4,7 +4,7 @@
   <form class="col-8 offset-2 form-validation" action="/campgrounds/new" method="post" novalidate enctype="multipart/form-data">
     <section class="my-4">
         <label class="form-label fw-bold" for="title">Campground Title</label>
-        <input required class="form-control border border-black fw-medium" type="text" id="title" name="campground[title]">
+        <input maxlength="50"  required class="form-control border border-black fw-medium" type="text" id="title" name="campground[title]">
         <div class="valid-feedback">
             Looks good!
         </div>      
@@ -14,7 +14,7 @@
     </section>
     <section class="my-4">
         <label class="form-label fw-bold" for="location">Campground Location</label>
-        <input required class="focus form-control border border-black fw-medium" type="text" id="location" name="campground[location]">
+        <input maxlength="50" required class="focus form-control border border-black fw-medium" type="text" id="location" name="campground[location]">
         <div class="valid-feedback">
             Looks good!
         </div> 
@@ -45,7 +45,7 @@
     </div>
     <section class="my-4">
         <label class="form-label fw-bold" for="description">Description</label>
-        <textarea rows="4" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required></textarea>
+        <textarea rows="3" maxlength="350" class="form-control border border-black fw-medium" type="text" id="description" name="campground[description]" required></textarea>
         <div class="valid-feedback">
             Looks good!
         </div>
