--- a/views/users/register.ejs
+++ b/views/users/register.ejs
@@ -1,41 +1,52 @@
 <% layout('./layout/boilerplate.ejs') %>
-<div class="row">
-    <form class=" border border-black rounded p-5 col-lg-6 offset-lg-3 col-md-8 offset-md-2 form-validation mt-5" action="/register" method="post" novalidate>
-        <h1 class="text-center">Register Account</h1>
-        <section class="my-5">
-            <label class="form-label fw-bold fs-5" for="username">Username</label>
-            <input required class="form-control border border-black fw-medium" type="text" id="username" name="username">
-            <div class="valid-feedback">
-                Looks good!
-            </div>      
-            <div class="invalid-feedback">
-                Please enter a Username.
-            </div>    
-        </section>
-        <section class="my-5">
-            <label class="form-label fw-bold fs-5" for="email">Email</label>
-            <input required class="form-control border border-black fw-medium" type="email" id="email" name="email">
-            <div class="valid-feedback">
-                Looks good!
-            </div>      
-            <div class="invalid-feedback">
-                Please enter a email.
-            </div>    
-        </section>
-        <section class="my-5">
-            <label class="form-label fw-bold fs-5" for="password">Password</label>
-            <input required class="form-control border border-black fw-medium" type="password" id="password" name="password">
-            <div class="valid-feedback">
-                Looks good!
-            </div>      
-            <div class="invalid-feedback">
-                Please enter a password.
-            </div>    
-        </section>
-        <button class="btn btn-success">Register</button>
-        <div class="text-center mt-3 fs-5 fw-semibold">
-            <span class="text-body-secondary">Already Registered?    </span> <a class="ms-2" href="/login">Login</a>
-        </div>
-    </form>
+<div class="container d-flex justify-content-center align-items-center">
+   <div class="row">
+      <div class="col-md-8 offset-md-2 mb-3">
+        <div class="card shadow p-3 mb-4">
+        <img src="../../camp-register.jpg"  class="card-top" alt="">
+        <form class=" form-validation " action="/register" method="post" novalidate>
+            <h1 class="text-center mt-3">Register Account</h1>
+            <section class="my-4">
+                <label class="form-label fw-bold fs-5" for="username">Username</label>
+                <input required class="form-control border border-black fw-medium" type="text" id="username" name="username">
+                <div class="valid-feedback">
+                    Looks good!
+                </div>      
+                <div class="invalid-feedback">
+                    Please enter a Username.
+                </div>    
+            </section>
+            <section class="my-4">
+                <label class="form-label fw-bold fs-5" for="email">Email</label>
+                <input required class="form-control border border-black fw-medium" type="email" id="email" name="email">
+                <div class="valid-feedback">
+                    Looks good!
+                </div>      
+                <div class="invalid-feedback">
+                    Please enter a email.
+                </div>    
+            </section>
+            <section class="my-4">
+                <label class="form-label fw-bold fs-5" for="password">Password</label>
+                <input required class="form-control border border-black fw-medium" type="password" id="password" name="password">
+                <div class="valid-feedback">
+                    Looks good!
+                </div>      
+                <div class="invalid-feedback">
+                    Please enter a password.
+                </div>    
+            </section>
+            <button class="btn btn-lg btn-primary">Register</button>
+            <div class="text-center mt-3 fs-4 fw-semibold">
+                <span class="text-body-secondary">Already Registered?    </span> <a class="ms-2" href="/login">Login</a>
+            </div>
+         </form>
+         </div>
+      </div>   
+    </div>
 </div>
+
+
+
+
 
